assets/css/main.css
:root {
    --navbar-height: 64px;
    --card-img-size: 128px;

    --radius-small: 8px;
    --radius-regular: 16px;
    --radius-large: 24px;
    --radius-full: 1000px;

    --spacing-small: 8px;
    --spacing-regular: 12px;
    --spacing-large: 16px;
}

html {
    height: -webkit-fill-available; /* replace with stretch when standardized */
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-height: -webkit-fill-available; /* replace with stretch when standardized */
    font-family: Noto, sans;
    line-height: 1.5;
    letter-spacing: 0.009375rem;
    background: var(--surface);
    color: var(--on-surface);
    margin: 0;
    padding: 0;
    overflow-y: scroll;
}

::selection {
    color: var(--surface);
    background: var(--on-surface);
}

::-moz-selection {
    color: var(--surface);
    background: var(--on-surface);
}

a, a code {
    color: var(--primary);
}

a:visited, a:visited code {
    color: var(--tertiary);
}

h1 a, h1 a:visited, h2 a, h2 a:visited, h3 a, h3 a:visited, h4 a, h4 a:visited, h5 a, h5 a:visited, h6 a, h6 a:visited {
    color: var(--on-surface-variant);
}


h1 {
    font-size: 2.25rem;
    line-height: 2.75rem;
    letter-spacing: 0;
}

h2 {
    font-size: 1.5rem;
    line-height: 2rem;
    letter-spacing: 0;
}

h3 {
    font-size: 1.375rem;
    line-height: 1.75rem;
    letter-spacing: 0;
}

h4 {
    font-size: 1rem;
    line-height: 1.5rem;
    letter-spacing: 0.009375rem;
}

h5 {
    font-size: 0.875rem;
    line-height: 1.25rem;
    letter-spacing: 0.00625rem;
}

h6 {
    font-size: 0.6875rem;
    line-height: 1rem;
    letter-spacing: 0.03125rem;
}

code, pre {
    background-color: color-mix(in srgb, var(--surface-variant) 40%, var(--surface) 60%);
    color: var(--on-surface-variant);
    font-family: "Noto Mono", monospace;
    font-size: 0.875rem; /* body-medium.size */
    letter-spacing: 0.015625rem; /* body-medium.tracking */
    line-height: 1.25rem; /* body-medium.line-height */
}

code {
    border-radius: var(--radius-small);
}

p code {
    padding: 0px 4px;
}

pre {
    border-radius: var(--radius-regular);
    border: 1px solid var(--outline);
    overflow-x: auto;
    padding: 0.875rem;
}

pre, details, details[open] summary {
    border-color: var(--outline-variant);
}

var {
    color: #ffb4ab;
}

blockquote {
    border-radius: 4px;
    border-left: 4px solid var(--on-surface-variant);
    background-color: color-mix(in srgb, var(--surface-variant) 40%, transparent 60%);
    padding: 4px 16px;
    margin: 1em 0;
}

main {
    margin-left: auto;
    margin-right: auto;
    padding: 1em;
    max-width: 832px;
    min-width: 0;
    width: 100%;
    box-sizing: border-box;
    overflow-wrap: break-word;
    padding-top: var(--navbar-height);
    flex: 1 0 auto;
}

ul ul {
    padding-left: 20px;
}

.coin-address {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.coin-address img {
    image-rendering: pixelated;
    width: 180px;
    height: 180px;
    border-radius: 16px;
}

.card-list {
    list-style: none;
    padding-left: 0;
}

.card, .card:visited {
    display: block;
    text-decoration: none;
    background-color: var(--surface-container-high);
    color: var(--on-surface-container);
    padding: var(--spacing-regular);
    border-radius: var(--radius-large);
}

.card > :first-child {
    margin-top: 0;
}

.card > :last-child {
    margin-bottom: 0;
}

.card h3 {
    margin-bottom: 0;
}

.post-date {
    margin-top: var(--spacing-small);
    color: var(--on-surface-variant);
}

.card-img {
    mask-image: linear-gradient(to bottom, black 1%, transparent 50%);
    height: calc(var(--card-img-size) * 2);
    overflow: hidden;
    margin-bottom: calc(var(--card-img-size) * -1);
}

.card-img img {
    width: 100%;
    height: auto;
    display: block;
}

footer {
    padding: 1em 1em;
    text-align: center;
    overflow-wrap: break-word;
    background: var(--surface-container);
    border-top-left-radius: var(--radius-large);
    border-top-right-radius: var(--radius-large);
}

footer a, footer a:visited {
    color: var(--on-surface-variant)
}

#footer-columns {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    gap: 1rem;
    align-items: center;
}

#footer-columns ul {
    padding: 0;
}

#pfp-layout {
    display: flex;
    text-align: left;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    list-style: none;
    justify-self: start;
    margin: 0;
}

#pfp-layout img {
    display: block;
    left-margin: 0;
}

#pfp-layout > :first-child {
    padding-left: 0;
}

#pfp-layout li {
    display: block;
    padding: 0 0.5em;
}

.footer-row {
    justify-self: center;
    margin: 0;
}

.footer-row li {
    display: inline-block;
    padding: 0 0.5em;
}

.footer-column {
    justify-self: end;
    text-align: left;
    margin: 0;
}

.footer-column li {
    display: block;
    padding: 0 0.5em;
}

@media (max-width: 900px) {
    #footer-columns {
        grid-template-columns: 1fr;
    }

    #pfp-layout {
        flex-direction: column;
        justify-self: center;
        align-items: center;
    }

    #pfp-layout li {
        justify-self: center;
    }

    .footer-row li,
    .footer-column li {
        display: block;
        text-align: center;
    }

    .footer-row,
    .footer-column {
        justify-self: center;
        text-align: center;
    }
}

#navbar-content-hider {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    background-color: var(--surface);
    margin-left: var(--spacing-regular);
    margin-right: var(--spacing-regular);
    height: calc(var(--navbar-height) / 2 + var(--spacing-regular));
}
/* ... */

